# ai_factory

./: .gitignore  CLAUDE.md  LICENSE  README.md  manifest.example.yaml  pyproject.toml
.claude/skills/: README.md
.claude/skills/ideate/: SKILL.md
.claude/skills/run/: SKILL.md
.claude/skills/ticket/: SKILL.md
docs/: ARCHITECTURE.md  DECISIONS.md  LINEAR_SCHEMA.md  MANIFEST.md  PHASES.md  TICKET_SPEC.md
examples/tickets/: hello-world.md  scope-test.md
phases/: PHASE_0_SPEC.md  PHASE_1_SPEC.md  PHASE_2_SPEC.md  PHASE_3_SPEC.md  PHASE_4_SPEC.md  PHASE_5_SPEC.md  PHASE_PLAN.md  README.md
src/factory/: cli.py  git_ops.py  ideate.py  linear.py  manifest.py  orchestrator.py  runner.py  sync.py  ticket.py
tests/: test_git_ops.py  test_ideate.py  test_manifest.py  test_sync.py  test_ticket.py
